--- a/contact/src/main/webapp/WEB-INF/web.xml
+++ b/contact/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,14 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <servlet>
+  	<servlet-name>saveservlet</servlet-name>
+  	<display-name>saveservlet</display-name>
+  	<description></description>
+  	<servlet-class>com.agilecrm.service.saveservlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>saveservlet</servlet-name>
+  	<url-pattern>/saveservlet</url-pattern>
+  </servlet-mapping>
 </web-app>
